k8s/base/svc-hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service-001
  namespace: odoo
  labels:
    app.kubernetes.io/name: odoo
    app.kubernetes.io/instance: main
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: odoo
  ports:
  - name: http
    port: 80
    targetPort: 8069
